--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,6 +10,7 @@ set -g mouse on
 set -g status-left " #S "
 set -g status-left-length 13
 set -g status-left-style fg=#eee8d5,bold,bg=#6700b5
+set -g default-terminal "xterm-256color"
 
 set -g window-status-current-style fg=#eee8d5,bold,bg=#b58900
 set -g window-status-current-format "#{?window_last_flag,`, }#{?window_zoomed_flag,[,}#I:#W#{?window_zoomed_flag,],}#{?window_last_flag,`, }"
