--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -104,7 +104,7 @@ fade-out-step = 0.1;
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 0.95;
+inactive-opacity = 1;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
@@ -122,7 +122,7 @@ inactive-opacity-override = false;
 
 # Specify a list of conditions of windows that should never be considered focused.
 # focus-exclude = []
-focus-exclude = [ "class_g = 'Cairo-clock'" ];
+focus-exclude = [ "class_g = 'Cairo-clock'", "class_g = 'brave'" ];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
 # inactive-dim-fixed = 1.0
