--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@ zsh/.zsh_history
 zsh/.zsh_zcompdump
 zsh/.zcompdump
 nvim/plugged/*
+Cursor
+go
+evince
 spotify
 pulse
 zoom*
@@ -23,6 +26,7 @@ dconf
 libreoffice
 blender
 evolution
+zoom*
 gtk-3.0
 vifm/vifminfo.json
 .gsd-keyboard.settings-ported
