--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,6 +4,7 @@ set -g pane-base-index 1
 
 set -g history-limit 1000000
 set -g mouse on
+set -g mode-keys vi
 
 
 # Tmux Appearance -------------------- {{{
