--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,28 +2,36 @@
 set -g base-index 1
 set -g pane-base-index 1
 
-set -g history-limit 1000000
+set -g history-limit 100000
 set -g mouse on
 set -g mode-keys vi
 
+set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.config/tmux/plugins/'
+set -g @tpm_plugins ' \
+	tmux-plugins/tpm  \
+	tmux-plugins/tmux-sensible \
+	egel/tmux-gruvbox' \
+#set -g @plugin 'dracula/tmux'
+set -g @tmux-gruvbox 'dark'
 
 # Tmux Appearance -------------------- {{{
 set -g status-left " #S "
 set -g status-left-length 13
-set -g status-left-style fg=#eee8d5,bold,bg=#6700b5
+#set -g status-left-style fg=#eee8d5,bold,bg=#6700b5
 set -g default-terminal "xterm-256color"
 
-set -g window-status-current-style fg=#eee8d5,bold,bg=#b58900
-set -g window-status-current-format "#{?window_last_flag,`, }#{?window_zoomed_flag,[,}#I:#W#{?window_zoomed_flag,],}#{?window_last_flag,`, }"
-set -g window-status-format "#{?window_last_flag,`, }#{?window_zoomed_flag,[,}#I:#W#{?window_zoomed_flag,],}#{?window_last_flag,`, }"
-
-set -g status-style fg=colour241,bg=colour233
-# #h hostshort , #S session , #W window , #T pane name
-wg_prfx=" #[fg=colour231,bg=default]#{?client_prefix,<Prefix>,}"  # prefix indicator widget
-wg_pane=" #[fg=colour202,bg=default]#{=26:pane_title}"
-wg_date=" #[fg=colour231,bold,italics,bg=default]%d-%b-%Y#[none]"
-wg_time=" #[fg=colour220,bold,bg=default]%H:%M"
-set -g status-right "${wg_prfx}${wg_pane}${wg_date}${wg_time}"
+#set -g window-status-current-style fg=#eee8d5,bold,bg=#b58900
+#set -g window-status-current-format "#{?window_last_flag,`, }#{?window_zoomed_flag,[,}#I:#W#{?window_zoomed_flag,],}#{?window_last_flag,`, }"
+#set -g window-status-format "#{?window_last_flag,`, }#{?window_zoomed_flag,[,}#I:#W#{?window_zoomed_flag,],}#{?window_last_flag,`, }"
+#
+#set -g status-style fg=colour241,bg=colour233
+## #h hostshort , #S session , #W window , #T pane name
+#wg_prfx=" #[fg=#bdae93,bg=default]#{?client_prefix,<Prefix>,}"  # prefix indicator widget
+##wg_pane=" #[fg=colour202,bg=default]#{=26:pane_title}"
+#wg_pane=" #[fg=#504945,bg=default]#{=26:pane_title}"
+#wg_date=" #[fg=#1d2021,bold,italics,bg=default]%d-%b-%Y#[none]"
+#wg_time=" #[fg=#1d2021,bold,bg=default]%H:%M"
+#set -g status-right "${wg_prfx}${wg_pane}${wg_date}${wg_time}"
 # }}}
 
 # C-b is not acceptable as prefix -- Vim uses it
@@ -68,3 +76,6 @@ bind -n M-6 select-window -t 6
 bind -n M-7 select-window -t 7
 bind -n M-8 select-window -t 8
 bind -n M-9 select-window -t 9
+
+run '~/.config/tmux/plugins/tpm/tpm'
+
